# aca_lab3

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  matvec  matvec.c  matvec_AUTO.c  util.c  util.h
include/: main_drivers.h  matmat.h  matmat_auto.h  matmat_drivers.h  matvec.h  matvec_auto.h  matvec_drivers.h  sse_methods.h  util.h
src/: main_drivers.c  matmat.c  matmat_auto.c  matmat_drivers.c  matvec.c  matvec_AUTO.c  matvec_auto.c  matvec_drivers.c  sse_methods.c  util.c
